--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,3 +1,51 @@
+body, div, h1, h2, h3, li {
+  font-family: inherit;
+  padding: 0;
+  margin: 0;
+}
+
+h1 {
+  text-align: center;
+  font-size: 26px;
+  margin: 20px auto;
+}
+
+header {
+  width: 100%;
+  margin: 10px;
+  text-align: center;
+
+}
+
+body {
+  font-family: sans-serif;
+  font-size: 10px;
+  font-weight: bold;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.js-delay {
+  height: 500px;
+  width: 500px;
+  border-radius: 10px;
+  border: 2px solid black;
+}
+
+.top-controls{
+  display: flex;
+  align-items: flex-start;
+  display: flex;
+  align-items: flex-start;
+  width: 80%;
+  margin: 30px;
+  justify-content: space-between;
+}
+
 .audio-on {
   height: 50px;
   width: 50px;
@@ -7,9 +55,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: white;
 }
 
 .audio-off {
+  background-color: white;
   height: 50px;
   width: 50px;
   border-radius: 50%;
@@ -20,7 +70,64 @@
   justify-content: center;
 }
 
+#on-off {
+  cursor: pointer;
+}
 
-.on-off {
+.js-delay {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.volume-container{
+  display: flex;
+  align-items: center;
+}
+
+#volume {
+    margin: 20px;
+    height: 50px;
+    width: 3px;
+    border: none;
+    outline: none;
+    position: relative;
+    background-color: black;
+    border-radius: 10px;
+}
+#volume .ui-slider-range{
+  background-color: red;
+  color: red;
+  height: 50px;
+  width: 3px;
+  bottom: 0;
+  position: absolute;
+  z-index: 1;
+  border: 1px solid black;
+  border-radius: 5px;
+  box-sizing: border-box;
+
+}
+
+.ui-slider .ui-slider-handle {
+	position: absolute;
+	z-index: 2;
+	cursor: pointer;
+  background-color: red;
+  border: 1px solid black;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  right: -4.6px;
+}
+
+#volume .ui-slider-handle:focus{
+  outline: 0;
+}
+
+.waveform{
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  background-color: black;
 }
