--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -10,6 +10,10 @@ h1 {
   margin: 20px auto;
 }
 
+h2 {
+  text-align: center;
+}
+
 header {
   width: 100%;
   margin: 10px;
@@ -29,23 +33,26 @@ body {
   flex-direction: column;
 }
 
-.js-delay {
-  height: 500px;
+.volume-effect, .delay-effect {
+  height: 200px;
   width: 400px;
   border-radius: 10px;
   border: 2px solid black;
+  padding-top: 20px;
+  margin: 20px;
+}
+.volume-on-container{
+  width: 33.33%
 }
 
-.top-controls{
-  display: flex;
-  align-items: flex-start;
+.volume-controls{
+  align-items: center;
   display: flex;
   width: 100%;
-  padding-top: 30px;
   justify-content: space-around;
 }
 
-.audio-on {
+.audio-on, .delay-on{
   height: 50px;
   width: 50px;
   border-radius: 50%;
@@ -57,7 +64,7 @@ body {
   background-color: white;
 }
 
-.audio-off {
+.audio-off, .delay-off {
   background-color: white;
   height: 50px;
   width: 50px;
@@ -69,7 +76,7 @@ body {
   justify-content: center;
 }
 
-#on-off {
+#on-off, #delay-on-off {
   cursor: pointer;
 }
 
@@ -80,10 +87,10 @@ body {
 }
 
 
-.volume-container{
+.waveform-container{
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
   margin: 10px;
 }
 
@@ -131,4 +138,68 @@ body {
   width: 150px;
   border-radius: 50%;
   background-color: black;
+}
+
+.volume-slider-container, .waveform-container, .volume-on-container{
+  width: 33.33%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.delay-on-container {
+  display: flex;
+  justify-content: center;
+}
+
+.delay-speed-slider-container,
+.delay-intensity-slider-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#delay-time,
+#delay-intensity {
+  margin: 10px;
+  height: 3px;
+  width: 200px;
+  border: none;
+  outline: none;
+  position: relative;
+  background-color: black;
+  border-radius: 10px;
+}
+#delay-time .ui-slider-range,
+#delay-intensity .ui-slider-range{
+  background-color: red;
+  color: red;
+  height: 3px;
+  width: 200px;
+  bottom: 0;
+  position: absolute;
+  z-index: 1;
+  border: 1px solid black;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+#delay-time .ui-slider-handle:focus,
+#delay-intensity .ui-slider-handle:focus{
+  outline: 0;
+}
+
+#delay-time > span,
+#delay-intensity > span{
+	position: absolute;
+	z-index: 2;
+	cursor: pointer;
+  background-color: red;
+  border: 1px solid black;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  top: -3.6px;
+  right: -4.6px;
 }
