--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -34,12 +34,19 @@ body {
 }
 
 .volume-effect, .delay-effect {
-  height: 200px;
   width: 400px;
   border-radius: 10px;
   border: 2px solid black;
-  padding-top: 20px;
+  padding: 20px;
   margin: 20px;
+}
+
+.volume-effect {
+  height: 200px;
+}
+
+.delay-effect {
+  height: 200px;
 }
 .volume-on-container{
   width: 33.33%
@@ -118,9 +125,9 @@ body {
 }
 
 .ui-slider .ui-slider-handle {
-	position: absolute;
-	z-index: 2;
-	cursor: pointer;
+  position: absolute;
+  z-index: 2;
+  cursor: pointer;
   background-color: red;
   border: 1px solid black;
   height: 10px;
@@ -153,7 +160,9 @@ body {
 }
 
 .delay-speed-slider-container,
-.delay-intensity-slider-container {
+.delay-intensity-slider-container,
+.delay-filter-slider-container,
+.delay-filter-q-slider-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -161,7 +170,9 @@ body {
 }
 
 #delay-time,
-#delay-intensity {
+#delay-intensity,
+#delay-filter,
+#delay-filter-q {
   margin: 10px;
   height: 3px;
   width: 200px;
@@ -172,7 +183,9 @@ body {
   border-radius: 10px;
 }
 #delay-time .ui-slider-range,
-#delay-intensity .ui-slider-range{
+#delay-intensity .ui-slider-range,
+#delay-filter .ui-slider-range,
+#delay-filter-q .ui-slider-range{
   background-color: red;
   color: red;
   height: 3px;
@@ -185,13 +198,14 @@ body {
   box-sizing: border-box;
 }
 
-#delay-time .ui-slider-handle:focus,
-#delay-intensity .ui-slider-handle:focus{
+.ui-slider-handle:focus{
   outline: 0;
 }
 
 #delay-time > span,
-#delay-intensity > span{
+#delay-intensity > span,
+#delay-filter > span,
+#delay-filter-q > span {
 	position: absolute;
 	z-index: 2;
 	cursor: pointer;
