--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,8 +2,14 @@ body, div, h1, h2, h3, li {
   font-family: inherit;
   padding: 0;
   margin: 0;
+  list-style: none;
 }
 
+
+li {
+  display: flex;
+  align-items: center;
+}
 
 h1 {
   text-align: center;
@@ -12,6 +18,13 @@ h1 {
 }
 
 h2 {
+  text-align: center;
+  font-size: 20px;
+  margin: 15px;
+}
+
+p {
+  font-size: 16px;
   text-align: center;
 }
 
@@ -47,7 +60,7 @@ body {
   color: white;
   display: flex;
   flex-direction: column;
-  width: 30%;
+  width: 23%;
   align-items: center;¡™
 }
 .info a {
@@ -59,15 +72,16 @@ body {
 }
 
 .effects {
-  width: 70%;
+  width: 60%;
 }
 
 .volume-effect, .delay-effect, .tremolo-effect {
   background-color: #4BB3FD;
   width: 350px;
   border-radius: 10px;
-  border: 2px solid black;
+  border: 1px solid black;
   padding: 20px;
+  box-shadow: -2px 3px 11px black;
   margin: 20px;
 }
 
@@ -92,7 +106,7 @@ body {
   height: 50px;
   width: 50px;
   border-radius: 50%;
-  border: 5px solid #01FF70;
+  border: 4px solid #01FF70;
   margin: 10px;
   display: flex;
   align-items: center;
@@ -103,7 +117,7 @@ body {
   height: 50px;
   width: 50px;
   border-radius: 50%;
-  border: 5px solid red;
+  border: 4px solid red;
   margin: 10px;
   display: flex;
   align-items: center;
@@ -251,4 +265,37 @@ body {
   border-radius: 50%;
   top: -3.6px;
   right: -4.6px;
+}
+
+.samples div {
+  height: 20px;
+  width: 20px;
+  margin: 10px 5px;
+  background-color: white;
+  border-radius: 50px;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.samples {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.fa-pause , .fa-play{
+  color: black;
+  font-size: 1em;
+  z-index: 10;
+}
+
+.fa-play{
+  padding-left: 2px;
+}
+
+.fa-pause{
+  padding-left: 1px;
 }
