--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,15 +1,9 @@
-body, div, h1, h2, h3, li {
+body, div, h1, h2, h3 {
   font-family: inherit;
   padding: 0;
   margin: 0;
-  list-style: none;
 }
 
-
-li {
-  display: flex;
-  align-items: center;
-}
 
 h1 {
   text-align: center;
@@ -20,20 +14,47 @@ h1 {
 h2 {
   text-align: center;
   font-size: 20px;
-  margin: 15px;
 }
 
 p {
   font-size: 16px;
-  text-align: center;
+  text-align: left;
 }
 
 header {
   width: 100%;
   margin: 10px;
   text-align: center;
-
 }
+
+.select-input{
+  margin: 0 auto;
+}
+
+.select-input li {
+  padding: 10px;
+}
+
+.instructions li {
+  padding: 5px 0;
+}
+
+.select-input li,
+.samples li {
+  display: flex;
+  align-items: center;
+}
+
+.user-controls{
+  display: flex;
+  align-items: flex-start;
+  margin-top: 40px;
+}
+
+input[type='radio']{
+  border: 1px solid black;
+}
+
 
 body {
   font-family: sans-serif;
@@ -60,12 +81,40 @@ body {
   color: white;
   display: flex;
   flex-direction: column;
-  width: 23%;
-  align-items: center;¡™
+  width: 30%;
+  align-items: center;
 }
+
+
+.site-link {
+  color: white;
+  padding: 10px;
+  border: 2px solid #ffffff;
+  box-shadow: -1px 1px 2px black;
+  border-radius: 8px;
+  width: 132px;
+  margin: 40px auto;
+  transition: color, 0.3s;
+  background-color: #027BCE;
+  transition: background-color .3s;
+  transition: border, .3s;
+  cursor: pointer;
+}
+
+.site-link:hover  a {
+  color:  #027BCE;
+}
+
+.site-link:hover {
+  color: #027BCE;
+  border: 2px solid black;
+  background-color: white;
+}
+
 .info a {
   color: white;
   text-decoration: none;
+  margin-bottom: 20px;
 }
 .devicon-github-plain {
   font-size: 4em;
@@ -80,7 +129,7 @@ body {
   width: 350px;
   border-radius: 10px;
   border: 1px solid black;
-  padding: 20px;
+  padding: 10px 15px;
   box-shadow: -2px 3px 11px black;
   margin: 20px;
 }
@@ -182,8 +231,8 @@ body {
 }
 
 .waveform{
-  height: 150px;
-  width: 150px;
+  height: 120px;
+  width: 120px;
   border-radius: 50%;
   background-color: black;
 }
@@ -283,6 +332,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0 auto;
+
 }
 
 
@@ -297,5 +348,9 @@ body {
 }
 
 .fa-pause{
-  padding-left: 1px;
+}
+
+input{
+  font-size: 30px;
+  margin: 5px;
 }
