--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -8,7 +8,7 @@ body, div, h1, h2, h3 {
 h1 {
   text-align: center;
   font-size: 40px;
-  margin: 20px auto;
+  margin: 10px auto;
 }
 
 h2 {
@@ -27,8 +27,15 @@ h2 {
   font-size: 13px;
 }
 
-.record h2 {
+.info a {
   color: white;
+  text-decoration: none;
+}
+.github-link {
+  margin: 20px 0;
+}
+
+.record h2 {
   margin: 20px auto;
 }
 
@@ -67,7 +74,7 @@ header {
 }
 
 .instructions li {
-  padding: 5px 0;
+  padding: 3px 0;
 }
 
 .select-input li,
@@ -78,9 +85,8 @@ header {
 
 .user-controls{
   width: 260px;
-  display: flex;
-  align-items: flex-start;
-  margin: 20px 0;
+  height: 125px;
+  margin: 10px 0;
   background-color: #4BB3FD;
   border-radius: 10px;
   border: 1px solid black;
@@ -88,7 +94,16 @@ header {
   color: black;
   box-shadow: -2px 3px 11px black;
   font-size: 13px;
-  width:
+}
+
+.controls-container{
+  display: flex;
+  align-items: flex-start;
+}
+
+.user-controls ul {
+  margin: 0;
+  padding: 0;
 }
 
 input[type='radio']{
@@ -126,10 +141,25 @@ body {
   align-items: center;
 }
 
-.record {
-  width: 300px;
+.user-options {
   display: flex;
+  align-items: center;
   flex-direction: column;
+  justify-content: center;
+}
+
+.recording-module {
+  background-color: #4BB3FD;
+  width: 100px;
+  border-radius: 10px;
+  border: 1px solid black;
+  padding: 10px 15px;
+  box-shadow: -2px 3px 11px black;
+  margin: 20px;
+}
+
+.recording-module h2 {
+  margin: 20px 0;
 }
 
 .save {
@@ -147,6 +177,10 @@ body {
 
 .hide {
   display: none;
+}
+
+.site-button{
+  margin: 10px 0;
 }
 
 .site-link {
@@ -173,11 +207,7 @@ body {
   background-color: white;
 }
 
-.info a {
-  color: white;
-  text-decoration: none;
-  margin-bottom: 20px;
-}
+
 .devicon-github-plain {
   font-size: 4em;
 }
@@ -417,6 +447,15 @@ input{
   margin: 5px;
 }
 
-.save { opacity: 0.25;}
+#save {
+  color: black;
+  text-decoration: none;
+}
 
-#save[download] .save {opacity: 1;}
+.save {
+  opacity: 0.25;
+}
+
+#save[download] .save {
+  opacity: 1;
+}
