--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -16,6 +16,51 @@ h2 {
   font-size: 20px;
 }
 
+.audio-fail{
+  position: absolute;
+  visibility: hidden;
+  background-color: white;
+  height: 300px;
+  width: 300px;
+  padding: 22px;
+  font-size: 20px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  top: 25%;
+  z-index: 100;
+  border: 3px solid black;
+}
+
+.show-fail {
+  visibility: visible;
+  animation-name: fade-in-out;
+  animation-duration: 2s;
+  opacity: .9
+}
+
+
+.content-fade {
+  animation: content-fade;
+  animation-duration: 2s;
+}
+
+
+@keyframes fade-in-out{
+  0% {opacity: 0;}
+  5% {opacity: .9;}
+  95% {opacity: .9;}
+  100% {opacity: 1;}
+}
+
+@keyframes content-fade{
+  0% {opacity: 1;}
+  5% {opacity: .2;}
+  95% {opacity: .2;}
+  100% {opacity: 1};
+}
+
 .instructions-container{
   width: 260px;
   background-color: #4BB3FD;
@@ -161,10 +206,11 @@ body {
   padding: 10px 15px;
   box-shadow: -2px 3px 11px black;
   margin: 20px;
+  position: relative;
 }
 
 .recording-module h2 {
-  margin: 20px 0;
+  margin: 40px 0 20px 0;
 }
 
 .save {
@@ -227,6 +273,7 @@ body {
 }
 
 .effect {
+  position: relative;
   background-color: #4BB3FD;
   width: 350px;
   border-radius: 10px;
@@ -474,4 +521,70 @@ p {
 }
 .instructions ul {
   margin: 0;
+}
+
+.fa-question-circle{
+  right: 15px;
+  font-size: 3em;
+  position: absolute;
+  cursor: pointer;
+  color:  white;
+}
+
+.recording-module .fa-question-circle{
+  right: 38%;
+}
+
+.volume-instructions > li,
+.delay-instructions > li,
+.tremolo-instructions > li,
+.record-instructions > li {
+  padding-bottom: 10px;
+}
+
+.volume-question:hover + .volume-instructions,
+.delay-question:hover + .delay-instructions,
+.tremolo-question:hover + .tremolo-instructions,
+.record-question:hover + .record-instructions{
+  visibility: visible;
+  opacity: 1;
+}
+
+
+.volume-instructions,
+.delay-instructions,
+.tremolo-instructions{
+  z-index:24;
+  position: absolute;
+  visibility: hidden;
+  width: 200px;
+  opacity: 0;
+  background-color: white;
+  left: 103%;
+  padding: 15px;
+  box-sizing: border-box;
+  color: black;
+  border: 2px solid black;
+  border-radius: 4px;
+  font-size: 13px;
+  font-weight: lighter;
+  transition: opacity, 0.5s;
+}
+
+.record-instructions{
+  z-index:24;
+  position: absolute;
+  width: 200px;
+  background-color: white;
+  left: -35px;
+  top: -51%;
+  opacity: 0;
+  padding: 15px;
+  box-sizing: border-box;
+  color: black;
+  border: 2px solid black;
+  border-radius: 4px;
+  font-size: 13px;
+  font-weight: lighter;
+  transition: opacity, 0.5s;
 }
