--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -282,8 +282,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  margin: 30px 0;
+  justify-content: space-around;
+  margin: 40px 0;
 }
 
 .effect {
