--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -464,7 +464,8 @@ body {
   border: 1px solid black;
   height: 15px;
   width: 5px;
-  top: -7.4px;
+  top: -7.5px;
+  margin-left: -3.5px;
   right: -4.6px;
 }
 
