--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -287,7 +287,7 @@ body {
   width: 350px;
   border-radius: 10px;
   border: 1px solid black;
-  padding: 10px 0px;
+  padding: 12px 0px;
 }
 
 
@@ -306,6 +306,7 @@ body {
 
 .tremolo-controls {
   display: flex;
+  text-align: center;
   flex-direction: column;
   align-items: center;
 }
